fix spacing on features

--- a/public/css/website.css
+++ b/public/css/website.css
@@ -398,7 +398,7 @@ section#get-started a.btn.small {
 
 /****************** Features ****************/
 section.hero-wires {
-  margin: 30px 0 0
+  margin: 30px 0 0;
   max-height: 701px;
   background: url('../img/features_header.jpg') center top no-repeat;
   background-size: cover;
